fix navbar overlap with anchor links

--- a/styles/style.css
+++ b/styles/style.css
@@ -121,6 +121,9 @@ h1 {
     text-align: center;
     margin-bottom: 1%;
 }
+h2 {
+    padding-top: 80px;
+}
 
 img#bb {
     width: 50%;
@@ -135,7 +138,7 @@ img#bb {
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    margin: 0 20% 10% 20%;
+    margin: 0 20% 5% 20%;
 }
 
 .button {
@@ -171,6 +174,7 @@ a.button:hover {
     align-items: center;
     justify-content: space-around;
 
+    margin-top: 0;
     background: white;
     border-radius: 10px;
     padding: 2em;
